{
  "version": 4,
  "terraform_version": "1.5.3",
  "serial": 11,
  "lineage": "16e974cf-c21b-1d67-a23c-736bf58a2ad2",
  "resources": [
    {
      "module": "module.network-security-group[\"nsg1\"]",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "dazhar-nsg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a3037bba-6825-406b-9289-2d507a425108/resourceGroups/prod-dazhar/providers/Microsoft.Network/networkSecurityGroups/dazhar-nsg1",
            "location": "eastus2",
            "name": "dazhar-nsg1",
            "resource_group_name": "prod-dazhar",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "test123",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rggroup.azurerm_resource_group.dazhar-rg"
          ]
        }
      ]
    },
    {
      "module": "module.network-security-group[\"nsg2\"]",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "dazhar-nsg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a3037bba-6825-406b-9289-2d507a425108/resourceGroups/prod-dazhar/providers/Microsoft.Network/networkSecurityGroups/dazhar-nsg2",
            "location": "eastus2",
            "name": "dazhar-nsg2",
            "resource_group_name": "prod-dazhar",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "test12",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rggroup.azurerm_resource_group.dazhar-rg"
          ]
        }
      ]
    },
    {
      "module": "module.subnet[\"snet2\"]",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "dazhar-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.0.0/29"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": true,
            "id": "/subscriptions/a3037bba-6825-406b-9289-2d507a425108/resourceGroups/prod-dazhar/providers/Microsoft.Network/virtualNetworks/dazhar-vn2/subnets/dazhar-subnet2",
            "name": "dazhar-subnet2",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": false,
            "resource_group_name": "prod-dazhar",
            "virtual_network_name": "dazhar-vn2"
          },
          "dependencies": [
            "module.rggroup.azurerm_resource_group.dazhar-rg",
            "module.virtualnetwork.azurerm_virtual_network.dazhar-vn"
          ]
        }
      ]
    },
    {
      "module": "module.subnet[\"vn1-snet1\"]",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "dazhar-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/29"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": true,
            "id": "/subscriptions/a3037bba-6825-406b-9289-2d507a425108/resourceGroups/prod-dazhar/providers/Microsoft.Network/virtualNetworks/dazhar-vn1/subnets/dazhar-subnet1",
            "name": "dazhar-subnet1",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": false,
            "resource_group_name": "prod-dazhar",
            "virtual_network_name": "dazhar-vn1"
          },
          "dependencies": [
            "module.rggroup.azurerm_resource_group.dazhar-rg",
            "module.virtualnetwork.azurerm_virtual_network.dazhar-vn"
          ]
        }
      ]
    },
    {
      "module": "module.subnet[\"vn1-snet2\"]",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "dazhar-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.8/29"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": true,
            "id": "/subscriptions/a3037bba-6825-406b-9289-2d507a425108/resourceGroups/prod-dazhar/providers/Microsoft.Network/virtualNetworks/dazhar-vn1/subnets/dazhar-subnet2",
            "name": "dazhar-subnet2",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": false,
            "resource_group_name": "prod-dazhar",
            "virtual_network_name": "dazhar-vn1"
          },
          "dependencies": [
            "module.rggroup.azurerm_resource_group.dazhar-rg",
            "module.virtualnetwork.azurerm_virtual_network.dazhar-vn"
          ]
        }
      ]
    },
    {
      "module": "module.virtualnetwork[\"vnetwork1\"]",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "dazhar-vn",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/24"
            ],
            "dns_servers": [
              "10.0.0.4",
              "10.0.0.5"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "4e6053e6-fbe2-43ad-907b-78a48b6a0335",
            "id": "/subscriptions/a3037bba-6825-406b-9289-2d507a425108/resourceGroups/prod-dazhar/providers/Microsoft.Network/virtualNetworks/dazhar-vn1",
            "location": "eastus2",
            "name": "dazhar-vn1",
            "resource_group_name": "prod-dazhar"
          },
          "dependencies": [
            "module.rggroup.azurerm_resource_group.dazhar-rg"
          ]
        }
      ]
    },
    {
      "module": "module.virtualnetwork[\"vnetwork2\"]",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "dazhar-vn",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.1.0.0/24"
            ],
            "dns_servers": [
              "10.0.0.6",
              "10.0.0.7"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "e9bc5da9-5ba5-446f-bf37-b46515828f2f",
            "id": "/subscriptions/a3037bba-6825-406b-9289-2d507a425108/resourceGroups/prod-dazhar/providers/Microsoft.Network/virtualNetworks/dazhar-vn2",
            "location": "eastus2",
            "name": "dazhar-vn2",
            "resource_group_name": "prod-dazhar"
          },
          "dependencies": [
            "module.rggroup.azurerm_resource_group.dazhar-rg"
          ]
        }
      ]
    }
  ]
}